# prompt_gen

./: .env.example  .env.template  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  DEPLOYMENT.md  ENV_CONFIG_GUIDE.md  FIXES_SUMMARY.md  TESTING.md  WINDOWS_DEPLOYMENT.md  docker-compose.yaml  pytest.ini  quick_deploy.ps1  quick_deploy.sh  system_validation.py  windows_deploy.ps1  windows_deploy_fixed.ps1
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  alembic.ini  api_routes.py  conftest.py  full_conversation_test.py  pyproject.toml  pytest.ini  requirements.txt  simple_api_server.py  test_api_workflow.py  test_automation_engine.py  test_complete_automation.py
backend/.claude/: settings.local.json
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  context_manager.py  conversation_manager.py  interfaces.py  message_formatter.py  orchestration_engine.py  product_manager.py  response_validator.py  state_tracker.py  team_lead.py  technical_developer.py
backend/src/api/: agents.py  clarifying_questions.py  history.py  sessions.py  user_input.py
backend/src/core/: config.py  exceptions.py  logging.py
backend/src/database/: connection.py  redis_client.py  utils.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 001_initial_schema.py
backend/src/models/: session.py
backend/src/repositories/: __init__.py  message_repository.py  question_repository.py  session_repository.py  user_input_repository.py
backend/src/services/: database_service.py  glm_api.py  glm_response_parser.py
backend/src/websocket/: __init__.py  websocket_handler.py
backend/tests/: conftest.py  test_api_endpoints.py  test_glm_api.py  test_integration.py  test_orchestration_engine.py
backend/tests/contract/: test_session_api_contract.py
backend/tests/integration/: test_api_health.py
backend/tests/mocks/: mock_glm_api.py
backend/tests/unit/: test_config.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  setupTests.ts
specs/001-ai-prompt-generator/: plan.md  (+5 more)
(+25 files in other folders)
